# crescent2

./: .clang-tidy  .gitmodules  CMakeLists.txt  CMakeOptions.cmake  LICENSE  README.md  config.hpp.in  kernel.def  limine.conf
apps/: CMakeLists.txt
apps/hello_world/: CMakeLists.txt
apps/hello_world/src/: main.cpp
cmake/: toolchain_x86_64_clang.cmake
common/: CMakeLists.txt  assert.hpp  cxx.cpp  fb_log.cpp  fb_log.hpp  flags_enum.hpp  font.cpp  font.hpp  stdio.cpp  stdio.hpp  types.hpp
common/arch/x86/arch/: misc.hpp
common/mem/: mem.cpp  mem.hpp
common/utils/: irq_guard.hpp
drivers/: CMakeLists.txt  wdm.h
drivers/aux_klib/: CMakeLists.txt
drivers/aux_klib/include/: aux_klib.h
drivers/aux_klib/src/: main.cpp
drivers/crt/: assert.h  stdio.h  string.h  wchar.h
drivers/kernel_stubs/: CMakeLists.txt
drivers/kernel_stubs/src/: main.cpp
drivers/pci/: CMakeLists.txt
drivers/pci/src/: main.cpp
drivers/rtl8169/: CMakeLists.txt
drivers/rtl8169/src/: main.cpp
drivers/uacpi/: CMakeLists.txt
drivers/uacpi/src/: glue.cpp  main.cpp
include/: Windows.h  basetsd.h  consoleapi.h  dpfilter.h  guiddef.h  handleapi.h  intsafe.h  ntdef.h  processenv.h  syscalls.hpp  winbase.h  windef.h  winnt.h  winsvc.h  winternl.h
include/priv/: ldr.h  peb.h
lds/: x86_64.ld
libs/: CMakeLists.txt
libs/cmt/: CMakeLists.txt
libs/cmt/src/: dummy.cpp
libs/kernel32/: CMakeLists.txt
libs/kernel32/src/: console.cpp  utils.hpp
libs/ntdll/: CMakeLists.txt
libs/ntdll/include/: ntapi.h  ntioapi.h  ntmmapi.h  ntpsapi.h
libs/ntdll/src/: entry.cpp  file.cpp  mm.cpp  ps.cpp  syscall.hpp
libs/oldnames/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/acpi/: CMakeLists.txt  acpi.cpp  acpi.hpp  glue.cpp  uacpi_libc.h
src/arch/: CMakeLists.txt  cpu.cpp  cpu.hpp  irq.hpp  irql.hpp
src/arch/x86/: CMakeLists.txt  arch_except.cpp  arch_sched.cpp  context.S  context.cpp  cpu.hpp  ctx_offsets.h  simd_state.hpp  smp.cpp  start.cpp
src/arch/x86/acpi/: madt.cpp
src/arch/x86/dev/: CMakeLists.txt  hpet.cpp  io_apic.cpp  io_apic.hpp  lapic.cpp  lapic.hpp  rtc.cpp  tsc.cpp
src/arch/x86/include/arch/: arch_cpu.hpp  arch_except.hpp  arch_irq.hpp  arch_irql.hpp  arch_sched.hpp  arch_syscall.hpp  arch_thread.hpp  caching.hpp  paging.hpp
src/arch/x86/include/x86/: io.hpp  irq.hpp
src/arch/x86/interrupts/: CMakeLists.txt  exceptions.cpp  gdt.cpp  idt.cpp  irq.cpp  stubs.S  usermode.S
src/arch/x86/loader/: CMakeLists.txt  start.S  start.cpp
src/arch/x86/mem/: CMakeLists.txt  paging.cpp  std_mem.cpp
src/dev/: CMakeLists.txt  clock.cpp  clock.hpp  device.cpp  device.hpp  driver.hpp  fb.cpp  fb.hpp  hal.cpp  hal.hpp  irq.cpp  irq.hpp  pci.cpp  pci.hpp  pnp.cpp  pnp.hpp  pnp_internals.hpp
src/dev/nic/rtl/: rtl8168.cpp
src/exe/: CMakeLists.txt  driver_loader.cpp  driver_loader.hpp  pe.cpp  pe.hpp  pe_headers.hpp
src/fs/: CMakeLists.txt  file.cpp  file.hpp  object.cpp  object.hpp  object_init.hpp  object_internals.hpp  registry.cpp  registry.hpp  tar.cpp  tar.hpp  tmpfs.cpp  tmpfs.hpp  vfs.cpp  vfs.hpp  vfs_internal.hpp
src/mem/: CMakeLists.txt  early_pmalloc.cpp  early_pmalloc.hpp  iospace.cpp  malloc.cpp  malloc.hpp  mm.cpp  mm.hpp  pmalloc.cpp  pmalloc.hpp  pool.hpp  register.hpp  vmem.cpp  vmem.hpp  vspace.cpp  vspace.hpp
src/misc/: CMakeLists.txt  bug_check.cpp  bug_check.hpp  callback.cpp  callback.hpp  cpu.cpp  cpu.hpp
src/sched/: CMakeLists.txt  apc.cpp  apc.hpp  callback_producer.cpp  callback_producer.hpp  descriptors.hpp  dispatch_header.cpp  dispatch_header.hpp  dpc.cpp  dpc.hpp  event.cpp  event.hpp  handle_table.cpp  handle_table.hpp  misc.hpp  mutex.cpp  mutex.hpp  process.cpp  process.hpp  ps.cpp  ps.hpp  sched.cpp  sched.hpp  semaphore.cpp  semaphore.hpp  thread.cpp  thread.hpp  wait.cpp  wait.hpp
src/std/: CMakeLists.txt  allocator.hpp  assert.cpp  atomic.hpp  cstring.cpp  cstring.hpp  ctype.cpp  ctype.hpp  cxx.cpp  cxx.hpp  functional.hpp  list.cpp  list.hpp  paged_list.cpp  paged_list.hpp  printf.hpp  rand.cpp  rand.hpp  rtl.cpp  rtl.hpp  shared_ptr.hpp  stdio.cpp  string.hpp  string_view.hpp  unique_ptr.hpp  unordered_map.hpp  vector.hpp  wchar.cpp  wchar.hpp
src/sys/: CMakeLists.txt  misc.cpp  misc.hpp  sys_info.cpp  syscalls.cpp  user_access.cpp  user_access.hpp
src/utils/: CMakeLists.txt  except.cpp  except.hpp  except_internals.hpp  export.hpp  profiler.cpp  profiler.hpp  push_lock.cpp  push_lock.hpp  queued_spinlock.cpp  queued_spinlock.hpp  shared_data.hpp  spinlock.cpp  spinlock.hpp  thread_safety.hpp
